--- a/www/templates/dashboard.html
+++ b/www/templates/dashboard.html
@@ -5,7 +5,7 @@
 <!-- </ion-view> -->
 <ion-view view-title="bhook">
     <ion-content class="has-header" padding="true">
-        <form style="" class="form-horizontal" ng-submit="submitAddBook()">
+        <form style="" class="form-horizontal" ng-submit="submitAddBook(formBookAuthorText)">
             <label style="" name="addform" class="item item-input">
             	<i class="icon ion-android-add-circle placeholder-icon"></i>
                 <input ng-click="addBook()" ng-model="formBookAuthorText"   placeholder="" type="text" > 
