--- a/www/templates/addauthbookmodal.html
+++ b/www/templates/addauthbookmodal.html
@@ -1,4 +1,4 @@
-<ion-modal-view>
+<ion-modal-view >
   <ion-header-bar>
     <h1 class="title">Add a book and his author</h1>
     <div class="buttons">
@@ -6,18 +6,21 @@
     </div>
   </ion-header-bar>
   <ion-content>
-    <form ng-submit="doLogin()">
+    <form>
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Author</span>
-          <input type="text" ng-model="loginData.username">
+          <input type="text" id="author"  ng-model="submitData.author">
+        </label>
+        <label class="item">
+          <button id="move"  ng-click="movetext()" ng-class="arrowDirectionClass"  class="button button-block button-calm icon " >Move</button>
         </label>
         <label class="item item-input">
           <span class="input-label">Book</span>
-          <input type="password" ng-model="loginData.password">
+          <input type="text" id="book" ng-model="submitData.book">
         </label>
         <label class="item">
-          <button class="button button-block button-positive" type="submit">Add</button>
+          <button class="button button-block button-positive" type="submit" ng-click="submitAuthBook()" >Add</button>
         </label>
       </div>
     </form>
