--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -14,7 +14,7 @@
         </label>
         <label class="item item-input">
           <span class="input-label">Password</span>
-          <input type="password" ng-model="loginData.password">
+          <input type="text" ng-model="loginData.password">
         </label>
         <label class="item">
           <button class="button button-block button-positive" type="submit">Log in</button>
