2 modals auth authbook
could be improved (function movetext())

--- a/www/templates/addauthbookmodal.html
+++ b/www/templates/addauthbookmodal.html
@@ -20,7 +20,7 @@
           <input type="text" id="book" ng-model="submitData.book">
         </label>
         <label class="item">
-          <button class="button button-block button-positive" type="submit" ng-click="submitAuthBook()" >Add</button>
+          <button class="button button-block button-positive" type="submit" ng-click="prepareAuthData()" >Add</button>
         </label>
       </div>
     </form>
