--- a/www/templates/readlist.html
+++ b/www/templates/readlist.html
@@ -1,6 +1,5 @@
-<ion-view view-title="Playlist">
-  <ion-content>
-    <h1>wish list</h1>
-    <h2>all those books i've read</h2
+<ion-view view-title="bhook - {{ 'already_read_list' | translate }}">
+<ion-content class="has-header" padding="true">
+todo
   </ion-content>
 </ion-view>
