--- a/www/templates/addauthbookmodal.html
+++ b/www/templates/addauthbookmodal.html
@@ -19,6 +19,11 @@
           <span class="input-label">Book</span>
           <input type="text" id="book" ng-model="submitData.book">
         </label>
+        <ion-list>
+          <ion-checkbox ng-model="submitData.to_read" ng-true-value="'YES'" ng-false-value="'NO'" ng-checked="true">  {{ 'to_read' | translate }}</ion-checkbox>
+        </ion-list>
+
+      </label>
         <label class="item">
           <button class="button button-block button-positive" type="submit" ng-click="prepareAuthData()" >Add</button>
         </label>
