--- a/www/templates/addauthbookmodal.html
+++ b/www/templates/addauthbookmodal.html
@@ -20,7 +20,7 @@
           <input type="text" id="book" ng-model="submitData.book">
         </label>
         <ion-list>
-          <ion-checkbox ng-model="submitData.to_read" ng-true-value="'YES'" ng-false-value="'NO'" ng-checked="true">  {{ 'to_read' | translate }}</ion-checkbox>
+          <ion-checkbox ng-model="submitData.toread" ng-true-value="'YES'" ng-false-value="'NO'" ng-checked="true">  {{ 'to_read' | translate }}</ion-checkbox>
         </ion-list>
 
       </label>
