--- a/www/templates/dashboard.html
+++ b/www/templates/dashboard.html
@@ -3,11 +3,11 @@
         <form style="" class="form-horizontal" ng-submit="submitAddBook(formBookAuthorText)">
             <label style="" name="addform" class="item item-input" >
             	<i class="icon ion-android-add-circle placeholder-icon"></i>
-                <input ng-click="addBook()" ng-model="formBookAuthorText"   placeholder="{{ 'add_a_book' | translate }}" type="text">
+                <input ng-click="addBook()" ng-model="data.formBookAuthorText" type="text">
             </label>
         </form>
-      <!--   <button class="button button-stable button-block " ng-click="testaddBook()">wish list </button>
-         <button class="button button-stable button-block " ng-click="resetdb()">reset db  </button>-->
+        <button class="button button-stable button-block " ng-click="testaddBook()">test add book </button>
+         <button class="button button-stable button-block " ng-click="resetdb()">reset db  </button>
 
             <label style="" class="item item-input label-assertive">
 
