--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -5,7 +5,7 @@
       </ion-nav-back-button>
 
       <ion-nav-buttons side="left">
-        <button class="button button-icon button-clear  ion-navicon" menu-toggle="left">
+        <button class="button button-icon button-clear button-energized ion-navicon" menu-toggle="left">
         </button>
         <img class="title-image" src="img/icon.png" width="30" height="30" />
       </ion-nav-buttons>
@@ -14,7 +14,7 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
+    <ion-header-bar class="bar-sta ble bar-energized">
       <h1 class="title">{{ 'menu' | translate }}</h1>
     </ion-header-bar>
     <ion-content>
