--- a/www/templates/wishlist.html
+++ b/www/templates/wishlist.html
@@ -1,6 +1,6 @@
 <ion-view view-title="bhook - {{ 'to_read_list' | translate }}">
   <ion-content class="has-header" padding="true">
-    <h4><i>{{ 'to_real_list_explain' | translate }} </i></h4>
+    <h4><i>{{ 'to_read_list_explain' | translate }} </i></h4>
     <ion-list show-delete="false" can-swipe="true">
 
       <ion-item ng-repeat="book in wishlist" class="alphabetlist" >
