--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,11 +1,24 @@
 <ion-view view-title="bhook - {{ 'settings' | translate }}">
   <ion-content class="has-header" padding="true">
+    <div class="item item-divider">
+      {{ 'settings_language' | translate  }}
+   </div>
+<div class="item">
+        <ion-radio ng-repeat="(key,lang) in translations"
+                         ng-value="key"
+                         ng-model="data.selectedLanguage"
+                        ng-change="languageChange(key)"
+                         >
+               {{ lang[key] }}
+          </ion-radio>
+        </div>
+          <div class="item item-divider">
+            {{ 'settings_db' | translate  }}
+            </div>
+            <div class="item">
+                <button class="button button-stable button-block " ng-click="testaddBook()">    {{ 'settings_dump_db' | translate  }}</button>
 
-        <ion-radio ng-repeat="lang in translations"
-                         ng-value="lang.value"
-                         ng-model="data.selectedLanguage">
-                {{ lang.value }}
-              </ion-radio>
-
+               <button class="button button-stable button-block " ng-click="testaddBook()">{{ 'settings_restore_db' | translate  }}</button>
+</div>
   </ion-content>
 </ion-view>
