dump db - adding libs

--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -16,9 +16,9 @@
             {{ 'settings_db' | translate  }}
             </div>
             <div class="item">
-                <button class="button button-stable button-block " ng-click="testaddBook()">    {{ 'settings_dump_db' | translate  }}</button>
+                <button class="button button-stable button-block " ng-click="savedatabase()">    {{ 'settings_dump_db' | translate  }}</button>
 
-               <button class="button button-stable button-block " ng-click="testaddBook()">{{ 'settings_restore_db' | translate  }}</button>
+               <button class="button button-stable button-block " ng-click="restoredatabase()">{{ 'settings_restore_db' | translate  }}</button>
 </div>
   </ion-content>
 </ion-view>
