--- a/www/templates/addauthbookmodal.html
+++ b/www/templates/addauthbookmodal.html
@@ -6,6 +6,31 @@
     </div>
   </ion-header-bar>
   <ion-content>
-    <form distribute-input />
+    <form distribute-input >
+        <div class="list">
+  <label class="item item-input">
+    <span class="input-label">{{ 'author' | translate }}</span>
+    <input type="text" id="author"  ng-model="submitData.author">
+  </label>
+  <label class="item">
+    <button id="move"  ng-click="movetext()" ng-class="arrowDirectionClass"  class="button button-block button-calm icon " >{{ 'move' | translate }}</button>
+  </label>
+  <label class="item item-input">
+    <span class="input-label">{{ 'book' | translate }}</span>
+    <input type="text" id="book" ng-model="submitData.book">
+  </label>
+  <ion-checkbox ng-model="submitData.toread" ng-true-value="'YES'" ng-false-value="'NO'" ng-init="checked=true" ng-click="toggleAdditionalForm()">  {{ 'to_read' | translate }}</ion-checkbox>
+    <div class="list" ng-model="rating" ng-show="submitData.toread == 'NO'" >
+    <rating ng-model="submitData.rate"  max="max" ></rating>
+    <label class="item item-input">
+    <textarea placeholder="{{ 'comment' | translate }}" ng-model="submitData.comment" ></textarea>
+    </div>
+ </label>
+</label>
+  <label class="item">
+    <button class="button button-block button-positive" type="submit" ng-click="prepareAuthData()" >{{ 'continue' | translate }}</button>
+  </label>
+</div>
+</form>
   </ion-content>
 </ion-modal-view>
