--- a/www/templates/addauthbookmodal.html
+++ b/www/templates/addauthbookmodal.html
@@ -16,12 +16,13 @@
     <button id="move"  ng-click="movetext()" ng-class="arrowDirectionClass"  class="button button-block button-calm icon " >{{ 'move' | translate }}</button>
   </label>
   <label class="item item-input">
-    <span class="input-label">{{ 'book' | translate }}</span>
+    <span class="input-label">{{ 'title' | translate }}</span>
     <input type="text" id="book" ng-model="submitData.book">
   </label>
-  <ion-checkbox ng-model="submitData.toread" ng-true-value="'YES'" ng-false-value="'NO'" ng-init="checked=true" ng-click="toggleAdditionalForm()">  {{ 'to_read' | translate }}</ion-checkbox>
+  <ion-checkbox ng-model="submitData.toread" ng-true-value="'YES'" ng-false-value="'NO'" ng-init="checked=true" ng-click="toggleAdditionalForm()">  {{ 'to_discover' | translate }}</ion-checkbox>
     <div class="list" ng-model="rating" ng-show="submitData.toread == 'NO'" >
-    <rating ng-model="submitData.rate"  max="max" ></rating>
+
+    <rating ng-model="submitData.rate"  max="max" >< </rating>
     <label class="item item-input">
     <textarea placeholder="{{ 'comment' | translate }}" ng-model="submitData.comment" ></textarea>
     </div>
