--- a/www/templates/dashboard.html
+++ b/www/templates/dashboard.html
@@ -6,7 +6,8 @@
                 <input ng-click="addBook()" ng-model="data.formBookAuthorText" type="text">
             </label>
         </form>
- 
+       <button class="button button-stable button-block " ng-click="testaddBook()">test add book </button>
+         <button class="button button-stable button-block " ng-click="resetdb()">reset db  </button>
             <label style="" class="item item-input label-assertive">
 
                 <i class="icon ion-search placeholder-icon"></i>
@@ -16,7 +17,7 @@
             <ion-item  style="" class="item-divider" translate="latest_books" >Latest from  wishlist</span></ion-item>
 
           <ion-list>
-
+ 
           	<ion-item ng-repeat="book in latestbooks" style="" >
                 <h2>{{book.book}}</h2>
                 <h4>{{book.author_firstname}} {{book.author_lastname}}</h4>
