start credit page

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -22,9 +22,7 @@
         <ion-item menu-close href="#/app/dashboard">
           <i class="icon ion-home placeholder-icon"></i>{{ 'main_page' | translate }}
         </ion-item>
-        <ion-item menu-close ng-click="login()">
-        <i class="icon ion-social-reddit placeholder-icon"></i>  {{ 'login' | translate }}
-        </ion-item>
+
         <ion-item menu-close href="#/app/wishlist">
         <i class="icon ion-ios-glasses-outline placeholder-icon"></i>{{ 'to_read_list' | translate }}
         </ion-item>
@@ -33,6 +31,9 @@
         </ion-item>
         <ion-item menu-close href="#/app/settings">
     <i class="icon ion-gear-b placeholder-icon"></i>  {{ 'settings' | translate }}
+        </ion-item>
+        <ion-item menu-close href="#/app/credits">
+        <i class="icon ion-social-reddit placeholder-icon"></i>  {{ 'credits' | translate }}
         </ion-item>
       </ion-list>
     </ion-content>
