fixed issues, start update form

--- a/www/templates/addauthbookmodal.html
+++ b/www/templates/addauthbookmodal.html
@@ -21,13 +21,13 @@
   </label>
   <ion-checkbox ng-model="submitData.toread" ng-true-value="'YES'" ng-false-value="'NO'" ng-init="checked=true" ng-click="toggleAdditionalForm()">  {{ 'to_discover' | translate }}</ion-checkbox>
     <div class="list" ng-model="rating" ng-show="submitData.toread == 'NO'" >
-
-    <rating ng-model="submitData.rate"  max="max" >< </rating>
+    <rating ng-model="submitData.rate"  max="max" > </rating>
     <label class="item item-input">
     <textarea placeholder="{{ 'comment' | translate }}" ng-model="submitData.comment" ></textarea>
+    </label>
     </div>
- </label>
-</label>
+ 
+
   <label class="item">
     <button class="button button-block button-positive" type="submit" ng-click="prepareAuthData()" >{{ 'continue' | translate }}</button>
   </label>
