--- a/www/templates/wishlist.html
+++ b/www/templates/wishlist.html
@@ -1,13 +1,12 @@
 <ion-view view-title="bhook - {{ 'to_read_list' | translate }}">
   <ion-content class="has-header" padding="true">
     <ion-list show-delete="false" can-swipe="true">
-
       <ion-item ng-repeat="book in wishlist" class="alphabetlist" >
           <h2 >{{book.author_lastname}}, {{book.author_firstname}}</h2>
-          <h4>{{book.book}}  </h4>
-           <ion-option-button class="button-assertive icon ion-trash-a" ng-click="deleteBook($index)"></ion-option-button>
+          <h4>{{book.book}} </h4>
+          <ion-option-button class="button-positive icon ion-edit" ng-click="updateItem($index)"></ion-option-button>
+          <ion-option-button class="button-assertive icon ion-trash-a" ng-click="deleteItem($index)"></ion-option-button>
       </ion-item>
-
   </ion-list>
   <ion-infinite-scroll ng-if="!end"
       on-infinite="loadMore()"
