--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -18,8 +18,8 @@ $dark:                            #444 !default;
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
-$energized:                       #ffed52 !default;
-$base-background-color:           lighten(#ffed52 ,30%) ;
+$energized:                       #15aff4 !default;
+$base-background-color:           lighten(#15aff4 ,30%) ;
 $bar-energized-text:              #000000 !default;
 
 
