--- a/www/templates/dashboard.html
+++ b/www/templates/dashboard.html
@@ -1,6 +1,8 @@
 <ion-view view-title="bhook" class="assertive">
     <ion-content class="has-header" padding="true">
+       <!-- <form style="" class="form-horizontal" ng-submit="openModalAuthBook()">-->
         <form style="" class="form-horizontal" ng-submit="openModalAuthBook()">
+       
             <label style="" name="addform" class="item item-input" >
             	<i class="icon ion-android-add-circle placeholder-icon"></i>
                 <input ng-click="addBook()" ng-model="data.formBookAuthorText" type="text">
