back to basics before test

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -24,10 +24,10 @@
         </ion-item>
 
         <ion-item menu-close href="#/app/wishlist">
-        <i class="icon ion-ios-glasses-outline placeholder-icon"></i>{{ 'to_read_list' | translate }}
+        <i class="icon ion-pin placeholder-icon"></i>{{ 'to_read_list' | translate }}
         </ion-item>
         <ion-item menu-close href="#/app/readlist">
-      <i class="icon ion-ios-glasses placeholder-icon"></i>  {{ 'already_read_list' | translate }}
+      <i class="icon ion-checkmark-round placeholder-icon"></i>  {{ 'already_read_list' | translate }}
         </ion-item>
         <ion-item menu-close href="#/app/settings">
     <i class="icon ion-gear-b placeholder-icon"></i>  {{ 'settings' | translate }}
