--- a/www/templates/dashboard.html
+++ b/www/templates/dashboard.html
@@ -12,12 +12,12 @@
            <button class="button button-stable button-block " ng-click="testaddBook()">test add book </button>
          <button class="button button-stable button-block " ng-click="resetdb()">reset db  </button>
          
-         -->
+     
             <label style="" class="item item-input label-assertive">
 
                 <i class="icon ion-search placeholder-icon"></i>
                 <input placeholder="{{ 'search' | translate }}" type="search">
-            </label>
+            </label>    -->
             <div style="width: 300px; height: 31px;" class="spacer"></div>
             <ion-item  style="" class="item-divider" translate="latest_books" >Latest from  wishlist</span></ion-item>
 
@@ -26,9 +26,9 @@
           	<ion-item ng-repeat="book in latestbooks" style="" >
 
                 <h2 ng-switch on="book.toread">
-                    <i class="icon ion-ios-glasses placeholder-icon" ng-switch-when="false">
+                    <i class="icon ion-pin placeholder-icon" ng-switch-when="false">
                     </i>
-                    <i class="icon ion-ios-glasses-outline placeholder-icon" ng-switch-when="true"></i>
+                    <i class="icon ion-checkmark-round placeholder-icon" ng-switch-when="true"></i>
                     {{book.book}}
                 </h2>
                 <h4>{{book.author_firstname}} {{book.author_lastname}}</h4>
