--- a/www/templates/dashboard.html
+++ b/www/templates/dashboard.html
@@ -26,9 +26,9 @@
           	<ion-item ng-repeat="book in latestbooks" style="" >
 
                 <h2 ng-switch on="book.toread">
-                    <i class="icon ion-pin placeholder-icon" ng-switch-when="false">
+                    <i class="icon ion-pin placeholder-icon" ng-switch-when="true">
                     </i>
-                    <i class="icon ion-checkmark-round placeholder-icon" ng-switch-when="true"></i>
+                    <i class="icon ion-checkmark-round placeholder-icon" ng-switch-when="false"></i>
                     {{book.book}}
                 </h2>
                 <h4>{{book.author_firstname}} {{book.author_lastname}}</h4>
