--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,25 +1,37 @@
-<ion-modal-view>
-  <ion-header-bar>
-    <h1 class="title">Login</h1>
-    <div class="buttons">
-      <button class="button button-clear" ng-click="closeLogin()">Close</button>
-    </div>
-  </ion-header-bar>
-  <ion-content>
-    <form ng-submit="doLogin()">
-      <div class="list">
-        <label class="item item-input">
-          <span class="input-label">Username</span>
-          <input type="text" ng-model="loginData.username">
-        </label>
-        <label class="item item-input">
-          <span class="input-label">Password</span>
-          <input type="text" ng-model="loginData.password">
-        </label>
-        <label class="item">
-          <button class="button button-block button-positive" type="submit">Log in</button>
-        </label>
-      </div>
-    </form>
+<ion-view view-title="bhook - {{ 'login' | translate }}">
+ <ion-content class="has-header" padding="true">
+        <div ng-show="loginen">
+                <div class="card">
+
+                <div class="item item-text-wrap">
+                    <p>
+                       By login to facebook, you'll be able topost your book reviews or requests and share those with your friends
+                    </p>
+                   
+                </div>
+
+                
+              </div>
+            
+        </div>
+        <div ng-show="loginfr">
+            <div class="card">
+
+                               <div class="item item-text-wrap">
+                    <p>
+                       En vous connectant à Facebook vous pourrez partager vos critiques de livres et partager vos demandes avec vos amis
+                    </p>
+                   
+                </div>
+
+             
+                </div>
+            </div>
+
+        </div>
+ 
+    <a class="facebook-sign-in button button-block" ng-click="facebookSignIn()">{{ 'login with Facebook' | translate }}</a>
+    
+    <a class="button button-block" ng-click="showLogOutMenu()">{{ 'logout fromf Facebook' | translate }}</a>
   </ion-content>
-</ion-modal-view>
+</ion-view>
