--- a/www/templates/readlist.html
+++ b/www/templates/readlist.html
@@ -1,9 +1,9 @@
 <ion-view view-title="bhook - {{ 'already_read_list' | translate }}">
   <ion-content class="has-header" padding="true">
     <ion-list show-delete="false" can-swipe="true">
-      <ion-item ng-repeat="book in readlist" class="alphabetlist" >
+      <ion-item ng-repeat="book in readlist track by $index" class="alphabetlist" >
           <h2 >{{book.author_lastname}}, {{book.author_firstname}}</h2>
-          <h4 class=" item-icon-right" >{{book.book}}<i class="icon ion-star">{{book.rate }}</i> </h4>
+          <h5 class="item-icon-right" >{{book.book}}<i class="icon ion-star">{{book.rate }}</i> </h5>
             
           
            <ion-option-button class="button-positive icon ion-edit" ng-click="updateItem($index)"></ion-option-button>
