bug on infinite scroll

--- a/www/templates/readlist.html
+++ b/www/templates/readlist.html
@@ -12,7 +12,7 @@
  
   </ion-list>
   <ion-infinite-scroll ng-if="!end"
-      on-infinite="loadMore()"
+      on-infinite="loadMore()" immediate-check="false"
       distance="25%">
     </ion-infinite-scroll>
   </ion-content>
