--- a/www/templates/dashboard.html
+++ b/www/templates/dashboard.html
@@ -34,7 +34,7 @@
                 <h4>{{book.author_firstname}} {{book.author_lastname}}</h4>
                 <h5 style="float:right">{{ 'added_at' | translate }} {{book.added | date : 'dd/MM/yyyy  hh:mm'}}</h5>
             </ion-item>
-            <ion-infinite-scroll ng-if="!end"
+            <ion-infinite-scroll ng-if="!end" immediate-check="false"
                 on-infinite="loadMore()"
                 distance="25%">
               </ion-infinite-scroll>
