--- a/www/templates/wishlist.html
+++ b/www/templates/wishlist.html
@@ -9,7 +9,7 @@
       </ion-item>
   </ion-list>
   <ion-infinite-scroll ng-if="!end"
-      on-infinite="loadMore()"
+      on-infinite="loadMore()" immediate-check="false"
       distance="25%">
     </ion-infinite-scroll>
   </ion-content>
