--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -5,7 +5,7 @@
 
                 <div class="item item-text-wrap">
                     <p>
-                       By login to facebook, you'll be able topost your book reviews or requests and share those with your friends
+                       By login to facebook, you'll be able to post your book reviews or requests and share those with your friends
                     </p>
                    
                 </div>
@@ -17,10 +17,10 @@
         <div ng-show="loginfr">
             <div class="card">
 
-                               <div class="item item-text-wrap">
+                    <div class="item item-text-wrap ">
                     <p>
                        En vous connectant à Facebook vous pourrez partager vos critiques de livres et partager vos demandes avec vos amis
-                    </p>
+                    </p> 
                    
                 </div>
 
@@ -30,8 +30,10 @@
 
         </div>
  
-    <a class="facebook-sign-in button button-block" ng-click="facebookSignIn()">{{ 'login with Facebook' | translate }}</a>
+    <button class="facebook-sign-in button button-block" ng-click="facebookSignIn()" ng-disabled="!logged" >
+         <i class="icon ion-android-share-alt placeholder-icon" > </i>
+        {{ 'login_with_facebook' | translate }}</button>
     
-    <a class="button button-block" ng-click="showLogOutMenu()">{{ 'logout fromf Facebook' | translate }}</a>
+    <button class="button button-block" ng-click="showLogOutMenu()" ng-disabled="logged">{{ 'logout_from_facebook' | translate }}</button>
   </ion-content>
 </ion-view>
