--- a/www/templates/wishlist.html
+++ b/www/templates/wishlist.html
@@ -4,6 +4,7 @@
       <ion-item ng-repeat="book in wishlist" class="alphabetlist" >
           <h2 >{{book.author_lastname}}, {{book.author_firstname}}</h2>
           <h4>{{book.book}} </h4>
+           <ion-option-button class="button-royal icon ion-android-share-alt" ng-hide="!logged" ng-click="shareItem($index)"></ion-option-button>
           <ion-option-button class="button-positive icon ion-edit" ng-click="updateItem($index)"></ion-option-button>
           <ion-option-button class="button-assertive icon ion-trash-a" ng-click="deleteItem($index)"></ion-option-button>
       </ion-item>
